--- a/数组.html
+++ b/数组.html
@@ -48,14 +48,33 @@
         }
         k--
       }
-      while (j>0) {
-        nums1[k]=nums2[j]
+      while (j > 0) {
+        nums1[k] = nums2[j]
         j--
         k--
       }
     }
     merge(nums1, m, nums2, n)
     console.log(nums1);
+    function ab() {
+      try {
+        d.forEach(item => {
+          if (item > 4) {
+            throw new Error('chucu2l')
+            // return new Error('chucuol')
+          }
+          console.log('1111');
+        })
+
+        console.log(2222);
+      } catch (err) {
+        console.log(err);
+      }
+    }
+    let d = [1, 4, 5, 6,]
+
+    ab()
+
   </script>
 </body>
 
