--- a/Array/2双指针题.html
+++ b/Array/2双指针题.html
@@ -8,10 +8,11 @@
 </head>
 <body>
   <script>
+    // 双指针法用在涉及求和、比大小类的数组题目里时，大前提往往是：该数组必须有序。否则双指针根本无法帮助我们缩小定位的范围，压根没有意义。
+
     const merge = function(nums1, m, nums2, n) {
     // 初始化两个指针的指向，初始化 nums1 尾部索引k
     let i = m - 1, j = n - 1, k = m + n - 1
-    // 当两个数组都没遍历完时，指针同步移动
     while(i >= 0 && j >= 0) {
         // 取较大的值，从末尾往前填补
         if(nums1[i] >= nums2[j]) {
