--- a/Array/3数组指针对撞.html
+++ b/Array/3数组指针对撞.html
@@ -10,6 +10,7 @@
 
 <body>
   <script>
+    // 什么时候你需要联想到对撞指针？ 这里我给大家两个关键字——“有序”和“数组”
     var nums = [-1, 0, 1, 2, -1, -4]
     function sum(nums) {
       let res = []
