--- a/Array/2双指针题.html
+++ b/Array/2双指针题.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <script>
+    //数组合并
     // 双指针法用在涉及求和、比大小类的数组题目里时，大前提往往是：该数组必须有序。否则双指针根本无法帮助我们缩小定位的范围，压根没有意义。
 
     const merge = function(nums1, m, nums2, n) {
